--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
+    "@supabase/supabase-js": "^2.97.0",
     "mongoose": "^9.2.1",
     "next": "13.5.11",
     "react": "^18",
